Fix misaligning of the amount/price/total in buy/sell sections

--- a/frontend/client/style/style.scss
+++ b/frontend/client/style/style.scss
@@ -454,6 +454,8 @@ table {
       font-size: 10px;
       color: #222228;
       letter-spacing: 1px;
+      min-width: 30px;
+      display: inline-block;
     }
 
     .help-block {
